--- a/src/articles/musical-modes.mdx
+++ b/src/articles/musical-modes.mdx
@@ -20,13 +20,13 @@ A reference sheet for the 7 musical modes.
 
 <div className="mb-8"></div>
 
-# Interactive scales
+## Interactive scales
 
 This is a quick tool for finding notes of a specific scale. Read on for references around the theory.
 
 <ModalScale />
 
-# Pattern of intervals between notes
+## Pattern of intervals between notes
 
 T - Tone
 : `s` - semitone
@@ -59,7 +59,7 @@ By "shifting" the order of the pattern, we end up with other scales. These scale
 
 <div className="mb-8"></div>
 
-# Intervals
+## Intervals
 
 Overview of what intervals are in scale.
 
@@ -79,7 +79,7 @@ Overview of what intervals are in scale.
 
 <div className="mb-8"></div>
 
-# Triad patterns
+## Triad patterns
 
 These are the chords you end up with when constructing triads that start at each scale degree and use only the notes from the scale.
 
