--- a/src/articles/patterns.mdx
+++ b/src/articles/patterns.mdx
@@ -11,7 +11,7 @@ import { PatternArticleList } from "../components"
 
 This is my own reference-sheet for patterns. The aim is to make my own vocabulary explicit to align with others and to enhance my knowledge over-time.
 
-# Why care?
+## Why care?
 
 Patterns are ways of organizing/architecting code or logical systems that have proven useful at solving _specific_ problems. They are useful for multiple reasons:
 
@@ -20,6 +20,6 @@ Patterns are ways of organizing/architecting code or logical systems that have p
 1. They give you a vocabulary to use when speaking to other developers about high-level concepts. Not needing to talk through low-level details can save _a lot_ of time during design discussions and reviews.
 1. They apply outside of code. These are ways to organize logical systems; you can apply patterns to any logically organized system e.g. companies/organizations, production lines, your workflow at home.
 
-# Patterns
+## Patterns
 
 <PatternArticleList />
