--- a/src/articles/personal-financial-thoughts.mdx
+++ b/src/articles/personal-financial-thoughts.mdx
@@ -29,7 +29,7 @@ import { Card, Disclaimer } from "../components"
 
 </Card>
 
-# Concepts
+## Concepts
 
 **Salary ratio**
 
@@ -63,7 +63,7 @@ An "option" is an opportunity to buy or sell one unit of stock at a specific pri
 
 Read on: https://www.investopedia.com/terms/o/option.asp
 
-# Thoughts
+## Thoughts
 
 **Takeaways from [The Little Book of Common Sense Investing - John C. Bogle][1]**
 
