--- a/src/articles/redux-unit-test-saga.mdx
+++ b/src/articles/redux-unit-test-saga.mdx
@@ -61,7 +61,7 @@ export function* fetchUserDataOnAction() {
 
 <div className="mb-5"></div>
 
-# Testing sagas directly
+## Testing sagas directly
 
 We'll first start by understanding a direct approach to testing sagas.
 It is the main approach that I've found when reading on how to test sagas online.
@@ -130,7 +130,7 @@ Another issue I have with this method is that we are invoking the saga different
 
 <div className="mb-5"></div>
 
-# Unit testing sagas
+## Unit testing sagas
 
 <Card heading="Credit where it's due">
   This expands on an approach I initially found in{" "}
