--- a/src/articles/javascript-scope.mdx
+++ b/src/articles/javascript-scope.mdx
@@ -17,11 +17,11 @@ Many bugs in programming arise from a misunderstanding of how scope is structure
 - [Lexical scoping](#lexical-scoping)
 - [Closure](#closure)
 
-# General definition
+## General definition
 
 **Scope** is the "stuff" that's available to a line of code at the time it gets executed. Scope contains the variables/references/values and functions that the line of code can access. Another name for scope could be the "execution context" of a specific line of code.
 
-# References
+## References
 
 JavaScript accesses values through **references**. The following steps through how references are used.
 
@@ -67,7 +67,7 @@ console.log(ageSnapshot)
 // => 20
 ```
 
-# Types of scope in JavaScript
+## Types of scope in JavaScript
 
 | type     | description                                                                                                                                                                                                                                                               |
 | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -104,7 +104,7 @@ function multiply(number) {
 export { multiply }
 ```
 
-## Variable declaration with block scope
+### Variable declaration with block scope
 
 `let` and `const` are confined by block scope. `var` is not confined by block scope.
 
@@ -127,7 +127,7 @@ console.log("let " + myLet) // not accessible outside of block
 
 This is important to consider when dealing with loops because loop iteration variables get defined in a block. Using `var` will cause the **same object** to persist across iterations. Using `let` will create a new instance for every loop.
 
-# Lexical scoping
+## Lexical scoping
 
 It's possible to nest scopes in JavaScript. With the idea of nesting scope comes the idea of **lexical scoping**, where a reference defined in a scope is available in that scope and all scopes that are nested within that scope.
 
@@ -171,7 +171,7 @@ const inGlobalScope = "foo"
 })()
 ```
 
-# Closure
+## Closure
 
 Functions can be used in a different context than the context they were declared in. In their original context, a function may have had access to constants or other functions that were defined outside of the function (i.e. in the function's parent scopes). For the function to work as expected, it's necessary to take a snapshot of scope at the time that the function is defined that the function can reference when it gets called in another context.
 
