--- a/src/articles/manipulate-this.mdx
+++ b/src/articles/manipulate-this.mdx
@@ -7,7 +7,7 @@ lastEdit: 2019-09-07
 guid: e82cbdfe-ac83-4af7-8670-66ed8859b227
 ---
 
-# What this is and why you should care
+## What this is and why you should care
 
 **The `this` keyword in JavaScript** is a reference to the ThisBinding. <span class="tooltip" data-tooltip="It references the object in which the function is defined if the function is a method; it references the global execution environment if the function is outside an object.">[The ThisBinding is updated dynamically by the interpreter.][this_binding_so]</span> The ThisBinding can allow functions to have access to scope that is outside of the function closure (e.g. <span class="tooltip" data-tooltip="This ability makes 'this' useful when working within objects. 'this' becomes analogous to what would be called 'private' or 'protected' scope in other languages.">other object attributes</span>).
 
@@ -70,7 +70,7 @@ afrikaansGreeting("van Niekerk")
 afrikaansGreeting("van die Spruitriviersfontein")
 ```
 
-# Practical example using bind
+## Practical example using bind
 
 Here we'll look at a situation where manipulating `this` can be useful.
 
@@ -139,7 +139,7 @@ try {
 
 ---
 
-# TODO
+## TODO
 
 - Applying functions to objects you don't control
 - Sharing methods with other objects
