--- a/src/articles/monoids.mdx
+++ b/src/articles/monoids.mdx
@@ -9,7 +9,7 @@ guid: 8e530e57-d03f-4381-9579-07b75fc15817
 
 In this document we'll briefly go through how we can use the mathematical concept of a monoid to help us design and build systems that enable composition.
 
-# Why should I care about composition?
+## Why should I care about composition?
 
 Composition is the idea that complex problems can be solved by combining the solutions of many simpler problems.
 This idea is a fundamental one in programming, where complex software that would be impossible for any individual programmer to tackle can
@@ -19,7 +19,7 @@ Given the importance of composition in our field, having knowledge of techniques
 
 There are multiple ways to approach composition. One approach is to do it mathematically: by defining a system of rules that work together to _guarantee_ composability. While there are many mathematical systems that enable composability, we'll be taking a look at one in particular that's proven itself to be useful when programming: monoids.
 
-# Monoids
+## Monoids
 
 The "monoid" is the name of a concept in mathematics. That concept lays out a system which, when applied, will guarantee composability. The system is made up of the following:
 a grouping of items that can be composed; an operation that you can use to compose these items; and some rules that both the items and the operation need to follow so that the system has useful properties.
@@ -35,7 +35,7 @@ To build an intuitive understanding of how this system works, we'll look at each
 
 <div className="mb-8"></div>
 
-# The Monoidal Product
+## The Monoidal Product
 
 Lets start with a set of blocks that we want to compose together:
 
@@ -81,7 +81,7 @@ This conceptually allows us to keep composing items together infinitely.
 <figcaption>First condition for a monoid: we need a **monoidal product** that **takes two items in a set** and **returns an item in the same set**.</figcaption>
 </figure>
 
-# Associativity
+## Associativity
 
 We now have the core of a system that allows composability, but we need to define some more rules that help make this system easy to work with.
 
@@ -101,7 +101,7 @@ An important note here that the "position" of the items still makes a difference
 </figure>
 
 
-# Identity
+## Identity
 
 The last thing we need to consider is that what we're building is a mathematical system. Mathematical systems, both in pure-maths and when part of software systems, don't know the exact data/information they will be working with ahead of time. In the case of composability, we won't know the number of items we'll need to compose together ahead of time. So our system needs to be able to handle any number of items. How do we handle the case where we're given _a single item_ given that we've built a system on top of the monoidal product, which composes _two_ items together?
 
@@ -128,7 +128,7 @@ And that's it. We have three conditions that give us a mathematical system that 
 
 So what do monoids look like in practice? Ironically, our LEGO blocks example is not a monoid: we saw that this system doesn't have an identity . There are several monoids in arithmetics: the set of real numbers, the monoidal product `+` and the identity `0` form a monoid; the set of real numbers, the monoidal product `*` and the identity `1` also form a monoid. We can also design them when writing software.
 
-# Example monoid in code
+## Example monoid in code
 
 Let's design a monoid that allows us to combine wishlists of stuff that our loved ones want.
 
@@ -330,7 +330,7 @@ console.log(wishlistFinal)
 // }
 ```
 
-# Recap/TLDR
+## Recap/TLDR
 
 A monoid is a mathematical system made up of:
 
