--- a/src/articles/pattern-builder.mdx
+++ b/src/articles/pattern-builder.mdx
@@ -11,13 +11,13 @@ import { Link } from "gatsby"
 
 **TLDR** A "builder" is a <Link to="/articles/patterns">pattern</Link> which provides a more user-friendly interface for configuring and creating an object.
 
-# Problem/context
+## Problem/context
 
 Classes with a lot of functionality can grow to have many optional parameters and many allowable configurations.
 These interfaces can become confusing and cumbersome to use.
 They can also be problematic to use if you don't have all the necessary parameters up-front, forcing the user to progressively keep a reference to parameters until all of them have been gathered.
 
-# Concept
+## Concept
 
 We create a class dedicated to tracking configuration choices and that exposes an API which allows users to specify options one at a time.
 When the user is ready, they can then ask this new class to create a new instance of the object.
@@ -30,7 +30,7 @@ When the user is ready, they can then ask this new class to create a new instanc
 - Configuration methods return the builder object to enable call-chaining.
 - The builder objects are stateful: they store configuration options.
 
-# Examples
+## Examples
 
 A **builder class** that creates a new car object with custom configuration.
 
