--- a/src/articles/pattern-interceptor.mdx
+++ b/src/articles/pattern-interceptor.mdx
@@ -11,7 +11,7 @@ import { Link } from "gatsby"
 
 **TLDR** An "interceptor" is a <Link to="/articles/patterns">pattern</Link> which enables different operations to act in sequence on the same object.
 
-# Problem/context
+## Problem/context
 
 There are senarios when we need to run multiple process in series on an object and either make a decision or transform the object.
 In these senarios, the processes may also need to be stateful.
@@ -19,7 +19,7 @@ In these senarios, the processes may also need to be stateful.
 An example of this senario is when handling requests in a webserver:
 we may want to perform authentication, <Link to="/articles/load-shedding-throttling">request-throttling</Link> and authorization in that order for all requests.
 
-# Concept
+## Concept
 
 The core idea is to have a sequence of processes. Each process is defined in a class, allowing state to be kept per-process.
 There is also a class which orchestrates the processes and handles errors/early returns from the sequence.
@@ -32,7 +32,7 @@ There is also a class which orchestrates the processes and handles errors/early 
 - There is an orchestrator class which contains the sequence of interceptors and which invokes them in sequence.
 - There are a common set of responses that interceptors can return to allow the sequence to continue or which trigger an early return from the orchetrator.
 
-# Examples
+## Examples
 
 An interceptor chain which processes a web request.
 
